--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.application.name=jacobsWebApp
 
+# A little less logging
+spring.main.log-startup-info=false
+spring.main.banner-mode=off
+
+# Server port
+server.port=8090
+logging.level.root=warn
+
 # Database settings for MySQL
 # Note: No db specified in the url, so we can create it if needed
+# (see JacobsWebApp.java)
+
 spring.datasource.url=jdbc:mysql://localhost:3306
 spring.datasource.username=root
 spring.datasource.password=12345678
@@ -18,6 +28,9 @@ spring.data.rest.basePath=api
 # Show updates to static files without having to restart Spring
 spring.web.resources.static-locations[0]=file:src/main/resources/static/
 spring.web.resources.static-locations[1]=classpath:/static/
+
+# We don't need OSIV (Open Session In View) so turn it off
+spring.jpa.open-in-view=false
 
 # This setting is commented out so that Spring
 # does not automatically create tables and change the db
