--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.application.name=jacobsWebApp
 
-# A little less logging
-spring.main.log-startup-info=false
-spring.main.banner-mode=off
-
 # Server port
 server.port=8090
-logging.level.root=warn
 
 # Database settings for MySQL
 # Note: No db specified in the url, so we can create it if needed
@@ -29,9 +24,13 @@ spring.data.rest.basePath=api
 spring.web.resources.static-locations[0]=file:src/main/resources/static/
 spring.web.resources.static-locations[1]=classpath:/static/
 
-# We don't need OSIV (Open Session In View) so turn it off
+# We don't need OSIV (Open Session In View), so turn it off
 spring.jpa.open-in-view=false
 
-# This setting is commented out so that Spring
-# does not automatically create tables and change the db
+# A little less logging
+logging.level.root=warn
+spring.main.banner-mode=off
+
+# This setting is commented out so that Spring/Hibernate
+# does not automatically creates tables and changes the db
 # spring.jpa.hibernate.ddl-auto=update
