--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,7 @@ spring.application.name=jacobsWebApp_0.8.2
 server.port=8090
 
 # Database settings for MySQL
-# Note: No db specified in the url, so we can create it if needed
-# (see JacobsWebApp.java)
-
-spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.url=jdbc:mysql://localhost:3306/jacobWebApp
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
