--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,11 @@
 			<artifactId>bcrypt</artifactId>
 			<version>0.10.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.17.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
