--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=3001
 # Database settings for MySQL
 spring.datasource.username=root
 spring.datasource.password=12345678
-spring.datasource.url=jdbc:mysql://localhost:3306/jacobWebApp
+spring.datasource.url=jdbc:mysql://localhost:3306/the_music_vault
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Needed to read our dbDump
