Added gzip compression

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,11 @@ spring.jpa.open-in-view=false
 logging.level.root=warn
 spring.main.banner-mode=off
 
+# Gzip compression
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/css,text/javascript,application/json,application/hal+json,application/octet-stream
+server.compression.min-response-size=512
+
 # This setting is commented out so that Spring/Hibernate
 # does not automatically creates tables and changes the db
 # spring.jpa.hibernate.ddl-auto=update
